# optrie

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example/: sample.dic  sample.tpl
include/: dict_op.h  literal_op.h  log_utils.h  op.h  op_trie.h  utils.h  wildcard_op.h
include/nlohmann/: json.hpp
src/: dict_op.cpp  literal_op.cpp  op.cpp  op_trie.cpp  py_module.cpp  utils.cpp  wildcard_op.cpp
