[build-system]
requires = ["setuptools>=59.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optrie"
version = "0.1.0"
authors = [
  { name="Junfu Qian", email="qianjunfu42@163.com" },
]
description = "A simple template matcher"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/qjf42/optrie"
"Bug Tracker" = "https://github.com/qjf42/optrie/issues"